[gd_scene load_steps=9 format=2]

[ext_resource path="res://data/tile32.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/ShotgunIntro.gd" type="Script" id=2]
[ext_resource path="res://data/LavaTilemap32.tres" type="TileSet" id=3]
[ext_resource path="res://data/LevelTilemap32.tres" type="TileSet" id=4]
[ext_resource path="res://src/scenes/level_assets/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/level_assets/ShottyPickup.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/level_assets/LevelGate.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/level_assets/Door.tscn" type="PackedScene" id=8]

[node name="ShotgunIntro" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 32, 18.75 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 33, 0, 32, 32 )

[node name="Geometry" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_mask = 14
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 65566, 1, 0, 65567, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 131102, 1, 0, 131103, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196636, 1, 0, 196637, 1, 0, 196638, 1, 0, 196639, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262173, 1, 0, 262174, 1, 0, 262175, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327710, 1, 0, 327711, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393247, 1, 0, 458752, 1, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458783, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524319, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589855, 1, 0, 655360, 1, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655391, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720927, 1, 0, 786432, 1, 0, 786463, 1, 0, 851968, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 1, 0, 851995, 1, 0, 851996, 1, 0, 851999, 1, 0, 917504, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983071, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048607, 1, 0, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114143, 1, 0, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1179677, 1, 0, 1179678, 1, 0, 1179679, 1, 0 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 12

[node name="TileMap" type="TileMap" parent="Area2D"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
collision_use_parent = true
format = 1
tile_data = PoolIntArray( 1048584, 0, 1, 1048585, 0, 1, 1048586, 0, 1, 1048587, 0, 1, 1048588, 0, 1, 1048589, 0, 1, 1048590, 0, 1, 1048591, 0, 1, 1048592, 0, 1, 1048593, 0, 1, 1048594, 0, 1, 1048595, 0, 1, 1048596, 0, 1, 1048597, 0, 1, 1048598, 0, 1, 1048599, 0, 1, 1048600, 0, 1, 1048601, 0, 1, 1048602, 0, 1, 1048603, 0, 1, 1048604, 0, 1, 1048605, 0, 1, 1048606, 0, 1, 1114120, 0, 65537, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65537, 1114135, 0, 65537, 1114136, 0, 65537, 1114137, 0, 65537, 1114138, 0, 65537, 1114139, 0, 65537, 1114140, 0, 65537, 1114141, 0, 65537, 1114142, 0, 65537 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 64, 457.876 )

[node name="Button" parent="." instance=ExtResource( 5 )]
position = Vector2( 656, 464 )

[node name="Button2" parent="." instance=ExtResource( 5 )]
position = Vector2( 240, 240 )

[node name="Button3" parent="." instance=ExtResource( 5 )]
position = Vector2( 432, 48 )

[node name="Button4" parent="." instance=ExtResource( 5 )]
position = Vector2( 816, 48 )

[node name="Button5" parent="." instance=ExtResource( 5 )]
position = Vector2( 880, 496 )

[node name="Door" parent="." instance=ExtResource( 8 )]
position = Vector2( 464, 392 )
scale = Vector2( 2, 1.5 )

[node name="Door2" parent="." instance=ExtResource( 8 )]
position = Vector2( 352, 416 )
scale = Vector2( 2, 2 )

[node name="Door3" parent="." instance=ExtResource( 8 )]
position = Vector2( 960, 416 )
scale = Vector2( 2, 2 )

[node name="LevelGate" parent="." instance=ExtResource( 7 )]
position = Vector2( 960, 448 )

[node name="SHPickup" parent="." instance=ExtResource( 6 )]
position = Vector2( 464, 412 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Lava_body_entered"]
[connection signal="button_end" from="Button" to="Door3" method="trigger"]
[connection signal="button_end" from="Button2" to="." method="shotgun_door"]
[connection signal="button_end" from="Button3" to="." method="shotgun_door"]
[connection signal="button_end" from="Button4" to="." method="stairs_door"]
[connection signal="button_end" from="Button5" to="LevelGate" method="trigger"]
[connection signal="level_won" from="LevelGate" to="." method="level_win"]
